=======
CHANGES
=======

2.4.3 (unreleased)
------------------

- Added base of Czech translation.

- Added Portuguese Brazilian translation.

2.4.2 (2011-01-22)
------------------

- Adjust test for the contentprovider feature to not depend on the
  ContentProviderBase class that was introduced in zope.contentprovider 3.5.0.
  This restores compatibility with Zope 2.10.

- Security issue, removed IBrowserRequest from IFormLayer. This prevents to
  mixin IBrowserRequest into non IBrowserRequest e.g. IJSONRPCRequest.
  This should be compatible since a browser request using z3c.form already
  provides IBrowserRequest and the IFormLayer is only a marker interface used
  as skin layer.

- Add English translation (generated from translation template using
  msgen z3c.form.pot > en/LC_MESSAGES/z3c.form.po).

- Added Norwegian translation, thanks to Helge Tesdal and Martijn Pieters.

- Updated German translation.


2.4.1 (2010-07-18)
------------------

- Since version 2.3.4 ``applyChanges`` required that the value exists
  when the field had a ``DictionaryField`` data manager otherwise it
  broke with an ``AttributeError``. Restored previous behavior that
  values need not to be exist before ``applyChanges`` was called by
  using ``datamanager.query()`` instead of ``datamanager.get()`` to
  get the previous value.

- Added missing dependency on ``zope.contentprovider``.

- No longer using deprecated ``zope.testing.doctest`` by using
  python's built-in ``doctest`` module.

2.4.0 (2010-07-01)
------------------

- Feature: mix fields and content providers in forms. This allow to enrich
  the form by interlacing html snippets produced by content providers.
  Adding html outside the widgets avoids the systematic need of
  subclassing or changing the full widget rendering.

- Bug: Radio widget was not treating value as a list in hidden mode.


2.3.4 (2010-05-17)
------------------

- Bugfix: applyChanges should not try to compare old and new values if the old